--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ img{
 }
 .banner-img{
   /* background-image: url(../image/banner-img.jpg); */
+  background-size: cover;
   height: 600px;
   background-repeat: no-repeat;
 }
@@ -56,6 +57,7 @@ img{
   /* background-image: url("/image/banner-img.jpg"); */
   background-repeat: no-repeat;
   padding: 50PX 0PX;
+  background-size: cover;
 
 }
 
@@ -300,6 +302,7 @@ animation: slide 30s linear infinite;
       /* background-image: url(../image/banner-img.jpg); */
       background-repeat: no-repeat;
       padding: 70px 0px 30px;
+      background-size: cover;
   }
   .form-box{
       background-color: #1cb3c6;
